CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)

PROJECT(diksam)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lm -g -Wall -Wswitch-enum -DDEBUG -DSHIFT_JIS_SOURCE -std=c99")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

INCLUDE_DIRECTORIES(include)

ADD_SUBDIRECTORY(debug)
ADD_SUBDIRECTORY(memory)
ADD_SUBDIRECTORY(compiler)
ADD_SUBDIRECTORY(share)
ADD_SUBDIRECTORY(dvm)

ADD_EXECUTABLE(diksam main/main.c)

TARGET_LINK_LIBRARIES(diksam mem dbg compiler dvm share)

